# email-sender

./: .gitignore  MANIFEST.in  email-sender.py  requirements.txt  send_email.py  setup.cfg  start_app_dev.sh
emailsender/: __init__.py  classes.py  config.py  emailsender.db  functions.py  models.py  schema.sql  send_email.py
emailsender/static/css/: style.css
emailsender/static/js/: campaigns.js  emailsender.js  home.js
emailsender/templates/: account.html  campaigns.html  confirm.html  emailsender.html  home.html  index.html  login.html  validate.html
static/css/: style.css
static/js/: index.js
templates/: index.html
tests/: send_email.py
