[metadata]
name = emailsender
version = 0.0.0
maintainer = Paul Vergnaud
maintainer_email = paul.vergnaud.pro@gmail.com
description = Simple Python email builder & sender using Flask framework.
long_description = file: README.md
long_description_content_type = text/x-rst

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    emailsender